[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flake8-debugger"
version = "4.0.0"
description = "ipdb/pdb statement checker plugin for flake8"
readme = "README.md"

license = "MIT"

authors = [
    "Joseph Kahn <josephbkahn@gmail.com>"
]

repository = "https://github.com/jbkahn/flake8-debugger"
homepage = "https://github.com/jbkahn/flake8-debugger"
keywords = [
  "flake8",
  "plugin",
  "linting",
  "debugger",
  "ipdb",
  "code quality"
]

classifiers = [
  'Development Status :: 3 - Alpha',
  'Environment :: Console',
  'Framework :: Flake8',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: Python :: 2',
  'Programming Language :: Python :: 3',
  'Topic :: Software Development :: Libraries :: Python Modules',
  'Topic :: Software Development :: Quality Assurance',
]


include = ["pyproject.toml", "flake8_debugger.py"]

[tool.poetry.plugins."flake8.extension"]
T100 = "flake8_debugger:DebuggerChecker"

[tool.poetry.dependencies]
python = ">=3.6"
"flake8" = ">=3.0"
six = "*"
pycodestyle = "*"

[tool.poetry.dev-dependencies]
black = { version = "^20.8b1" }
pytest = "*"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
skip-numeric-underscore-normalization = true
